--- a/index.html
+++ b/index.html
@@ -17,27 +17,9 @@
       <button class="shake">Shakes</button>
       <button class="dinner">Dinner</button>
     </div>
-    <div class="card">
-      <div class="img">
-        <img
-          width="100px"
-          height="100px"
-          src="./image/morning.png"
-          alt="morning"
-        />
-      </div>
-      <div>
-        <h3>Buttermilk Pancakes</h3>
-        <p>$15.99</p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Error odio
-          vel molestiae asperiores quaerat at illum consectetur facere, cum
-          nisi, commodi perferendis. Eos nisi nesciunt ex voluptatem
-          perspiciatis ad deserunt?
-        </p>
-      </div>
+    <div class="container">
+      <div class="menuContainer"></div>
     </div>
-    <div class="menu-container"></div>
     <script src="script.js"></script>
   </body>
 </html>
