--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div class="container">
       <div class="menuContainer"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="copy.js"></script>
+    <!-- <script src="script.js"></script> -->
   </body>
 </html>
